# francophonia

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  mkdocs.yml  pyproject.toml
docs/: example_md_ext.md  index.md  macro.py  tags.md
docs/__examples/: macro.md
docs/__static/css/: extra.css
docs/blog/: .authors.yml  snippet.md
docs/blog/author/: team.md
docs/blog/posts/: example_md_ext.md  post_2.md
docs/tool/: index.md
src/francophonia/: __init__.py  __main__.py  app.py  cli.py
