[tool.poetry]
name = "francophonia"
version = "0.1.0"
description = ""
authors = ["Athroniaeth <pierre.chaumont@hotmail.fr>"]
readme = "README.md"
package-mode = false
packages = [
    { include = "masterfish", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.6.1"
uvicorn = "^0.31.1"
fastapi = "^0.115.0"
mkdocs-material = "^9.5.39"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
