[project]
name = "francophonia"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Athroniaeth", email = "pierre.chaumont@hotmail.fr" }
]
dependencies = [
    "mkdocs>=1.6.1",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.5",
    "mkdocs-material>=9.5.44",
    "typer>=0.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/francophonia"]
